--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,13 +56,13 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>raw_data</td>\n",
-       "      <td>c:\\Practical Business Python\\Year 2\\projecten\\...</td>\n",
+       "      <td>C:\\Python projects\\regression task\\evaluatie-2...</td>\n",
        "      <td>Training dataset in Excel format as downloaded...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>y_testdata</td>\n",
-       "      <td>c:\\Practical Business Python\\Year 2\\projecten\\...</td>\n",
+       "      <td>C:\\Python projects\\regression task\\evaluatie-2...</td>\n",
        "      <td>Training testdata as downloaded from mail in C...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -71,8 +71,8 @@
       ],
       "text/plain": [
        "          Key                                          File Path                                        Explanation\n",
-       "0    raw_data  c:\\Practical Business Python\\Year 2\\projecten\\...  Training dataset in Excel format as downloaded...\n",
-       "1  y_testdata  c:\\Practical Business Python\\Year 2\\projecten\\...  Training testdata as downloaded from mail in C..."
+       "0    raw_data  C:\\Python projects\\regression task\\evaluatie-2...  Training dataset in Excel format as downloaded...\n",
+       "1  y_testdata  C:\\Python projects\\regression task\\evaluatie-2...  Training testdata as downloaded from mail in C..."
       ]
      },
      "metadata": {},
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -695,35 +695,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "#For jobs we saw that there's some redundancy: same jobs - different spelling. \n",
-    "# let's address this quickly: (extend as needed)\n",
-    "cleanup_jobs = {\n",
-    "    'Business Intelligence': 'BI',\n",
-    "    'Machine Learning': 'ML',\n",
-    "    'Financial': 'Finance',\n",
-    "    'Modeller': 'Modeler'\n",
-    "    }\n",
-    "df_processed = cleanup_strings(df_processed, 'job_title', cleanup_jobs)"
+    "# let's address this quickly with the extractor utility.\n",
+    "df_processed[['field', 'title']] = df_processed['job_title'].apply(h.extractor).apply(pd.Series)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Same for country data in employee_residence and company_location\n",
-    "cleanup_countriess = {\n",
+    "cleanup_countries = {\n",
     "    'ü': 'u',\n",
     "    ',': '',\n",
     "    ' ': '_'\n",
     "    }\n",
-    "df_processed = cleanup_strings(df_processed, 'employee_residence', cleanup_countriess)\n",
-    "df_processed = cleanup_strings(df_processed, 'company_location', cleanup_countriess)"
+    "df_processed = cleanup_strings(df_processed, 'employee_residence', cleanup_countries)\n",
+    "df_processed = cleanup_strings(df_processed, 'company_location', cleanup_countries)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Machine Learning' 'Data Science' 'Data ' 'Business Intelligence' ''\n",
+      " 'Research ' 'Analytics ' 'Data Analytics' 'Artificial Intelligence'\n",
+      " 'Data Operations ' 'Data Science ' ' Data' ' Data Science'\n",
+      " 'Managing  Data Science' 'Cloud' 'Computer Vision' 'Decision ' 'Applied '\n",
+      " 'ML ' 'Data DevOps ' 'Finance' 'NLP ' 'Principal Data ' 'Data Quality'\n",
+      " 'MLOps ' 'Marketing ' 'Business ' 'ETL ' 'Prompt ' 'Autonomous Vehicle '\n",
+      " 'Data Integration' 'Data Management ' 'Big Data' 'Lead Data '\n",
+      " ' of Data Science' 'Robotics' 'Data Visualization ' 'Computational '\n",
+      " 'Admin & ' 'Deep Learning ' 'Compliance ' 'Lead ' 'Sales ' 'Insight '\n",
+      " 'Data Infrastructure' 'Data Modeller' 'Principal ' 'ML Ops '\n",
+      " 'Software Data ' 'Data Science Tech ' 'Product ' ' Data Management'\n",
+      " 'Data Strategy ' 'Data Reporting ' 'Analytics Engineering ' 'Staff '\n",
+      " 'Data Pipeline ' 'Consultant Data ' ' Lead' 'Quantitative Research '\n",
+      " 'Marketing Data ']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df_processed.field.unique())"
    ]
   },
   {
@@ -742,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -783,7 +807,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "evaluatie 2 - regressie",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -797,9 +821,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
